data/derived/comb/progs/unify/prog6375.ml.out
Characters 85-86:
  else counter (c+1) additivePersistence (sumList(digits n))
                ^
Error: This expression has type 'a -> 'b -> 'c
       but an expression was expected of type int
